package top.mcwebsite.bridge_pattern;

/**
 * @author mengchen
 * @time 19-2-23 下午5:16
 */
public class Client {
}
