@startuml

class FlyweightFactory
abstract Flyweight
class ConcreteFlyweight
class UnsharedConcreteFlyweight
class Client

FlyweightFactory o-right-> Flyweight : "+flyweight"
Client -up-> FlyweightFactory
ConcreteFlyweight -up-|> Flyweight
UnsharedConcreteFlyweight  -up-|> Flyweight
Client -up-> ConcreteFlyweight
Client -up-> UnsharedConcreteFlyweight
@enduml
